added sample website

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="container">
         <h1>About Us</h1>
         <p>
-          Elevate Lab is an Organisation for university students who
+          Code with US is an Organisation for university students who
           Collaboratively wants to bring about a change through technology. We
           Believe In Contributing Towards The Betterment Of Society Through
           Technology . Anyone is welcome here for contributing and to learn Open
