--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code With Us</title>
     <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
@@ -19,7 +20,7 @@
         </ul>
       </div>
     </header>
-    <div class="showcase">
+    <div class="showcase" id="home">
       <div class="container">
         <div class="secHead">
           <h1>Code With US</h1>
@@ -87,14 +88,51 @@
       </div>
     </div>
 
-    <footer>
-      <div class="container">
-        <p>
-          All Rights Reserved | Copyright &copy;
-          <strong>Coffee with Devs'20</strong>
-        </p>
-      </div>
-    </footer>
+    <footer class="footer-distributed">
+			<div class="footer-left">
+				<h3><span>Code with Us</span></h3>
+
+				<p class="footer-links">
+					<a href="#home">Home</a>
+					|
+					<a href="./team.html">Team</a>
+					|
+					<a href="#aboutus">About</a>
+					|
+					<a href="#contactus">Contact</a>
+				</p>
+
+				<p class="footer-company-name">© 2020 Code With Us.</p>
+			</div>
+
+			<div class="footer-center">
+				<div>
+					<i class="fa fa-map-marker"></i>
+					  <p><span>Delhi</span> <!--Add your location here-->
+						</p>
+				</div>
+
+				<div>
+					<i class="fa fa-phone"></i>
+					<p>+91 XXXXXXXXXX</p> <!--Add your contact number-->
+				</div>
+				<div>
+					<i class="fa fa-envelope"></i>
+					<p><a href="mailto:emailhere@abc.com">emailhere@abc.com</a></p> <!--Add You MailID after mailto:-->
+				</div>
+			</div>
+			<div class="footer-right">
+				<p class="footer-company-about">
+					<span>About the company</span>
+					Code with US is an Organisation for university students who want to
+          bring about a change through technology.</p>
+				<div class="footer-icons">
+					<a href="/"><i class="fa fa-facebook"></i></a> <!--Add Social Links Here-->
+					<a href="/"><i class="fa fa-instagram"></i></a>
+					<a href="/"><i class="fa fa-linkedin"></i></a>
+				</div>
+			</div>
+		</footer>
 
     <script src="public/js/main.js"></script>
   </body>
