--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   </head>
   <body>
+	  <div cls="cnt">
     <header>
       <div class="brand"><a href="#">Code with Us</a></div>
       <div class="nav">
@@ -133,7 +134,8 @@
 				</div>
 			</div>
 		</footer>
-
+	  </div>
     <script src="public/js/main.js"></script>
+		  
   </body>
 </html>
