Revert "Add responsive nav-bar"

--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
   </head>
   <body>
     <header>
-      <nav class="navbar">
-        <span class="navbar-toggle" id="js-navbar-toggle">
-            <i class="fa fa-bars"></i>
-        </span>
-        <div class="brand"><a href="#">Code with Us</a></div>
-        <ul class="main-nav" id="js-menu">
+      <div class="brand"><a href="#">Code with Us</a></div>
+      <div class="nav">
+        <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./team.html">Team</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#aboutus">About</a></li>
           <li><a href="#contactus">Contact</a></li>
         </ul>
-    </nav>
+      </div>
     </header>
     <div class="showcase" id="home">
       <div class="container">
