added content in team page

--- a/team.html
+++ b/team.html
@@ -1,35 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Team | Code with Us</title>
     <link rel="stylesheet" href="./public/css/style.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+</head>
+
+<body>
     <header>
-      <div class="brand"><a href="#">Code with Us</a></div>
-      <div class="nav">
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./team.html">Team</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#aboutus">About</a></li>
-          <li><a href="#contactus">Contact</a></li>
-        </ul>
-      </div>
+        <div class="brand"><a href="#">Code with Us</a></div>
+        <div class="nav">
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./team.html">Team</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#aboutus">About</a></li>
+                <li><a href="#contactus">Contact</a></li>
+            </ul>
+        </div>
     </header>
 
-    <div class="team"></div>
+    <div class="team">
+
+        <div class="row">
+            <div class="col"><span></span>
+                <p><img src="https://images.unsplash.com/photo-1499996860823-5214fcc65f8f?ixlib=rb-1.2.1&auto=format&fit=crop&w=402&q=80" alt="team-member"></p>
+            </div>
+            <div class="col">
+                <h3>Team-Member</h3>
+                <p>Founder-CEO</p>
+                <div class="social-link">
+                    <i class="fa fa-facebook"></i>
+                    <i class="fa fa-twitter"></i>
+                    <i class="fa fa-linkedin"></i>
+                </div>
+            </div>
+            <div class="col">
+                <span></span>
+                <p><img src="https://images.unsplash.com/photo-1499996860823-5214fcc65f8f?ixlib=rb-1.2.1&auto=format&fit=crop&w=402&q=80" alt="team-member"></p>
+            </div>
+            <div class="col">
+                <h3>Team-Member</h3>
+                <p>Software Developer</p>
+                <div class="social-link">
+                    <i class="fa fa-facebook"></i>
+                    <i class="fa fa-twitter"></i>
+                    <i class="fa fa-linkedin"></i>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row">
+
+            <div class="col">
+                <h3>Team-Member</h3>
+                <p>Founder-CEO</p>
+                <div class="social-link">
+                    <i class="fa fa-facebook"></i>
+                    <i class="fa fa-twitter"></i>
+                    <i class="fa fa-linkedin"></i>
+                </div>
+            </div>
+            <div class="col"><span></span>
+                <p><img src="https://images.unsplash.com/photo-1499996860823-5214fcc65f8f?ixlib=rb-1.2.1&auto=format&fit=crop&w=402&q=80" alt="team-member"></p>
+            </div>
+
+            <div class="col">
+                <h3>Team-Member</h3>
+                <p>Software Developer</p>
+                <div class="social-link">
+                    <i class="fa fa-facebook"></i>
+                    <i class="fa fa-twitter"></i>
+                    <i class="fa fa-linkedin"></i>
+                </div>
+            </div>
+            <div class="col"><span></span>
+                <p><img src="https://images.unsplash.com/photo-1499996860823-5214fcc65f8f?ixlib=rb-1.2.1&auto=format&fit=crop&w=402&q=80" alt="team-member"></p>
+            </div>
+        </div>
+    </div>
+
+
+
 
     <footer>
-      <div class="container">
-        <p>
-          All Rights Reserved | Copyright &copy;
-          <strong>Coffee with Devs'20</strong>
-        </p>
-      </div>
+        <div class="container">
+            <p>
+                All Rights Reserved | Copyright &copy;
+                <strong>Coffee with Devs'20</strong>
+            </p>
+        </div>
     </footer>
     <script src="public/js/main.js"></script>
-  </body>
+</body>
+
 </html>
