--- a/team.html
+++ b/team.html
@@ -4,40 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Team | Code with Us</title>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./public/css/style.css" />
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light w-100">
-        <a class="navbar-brand brand" href="#">Code with Us</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav w-100 justify-content-end text-right">
-            <li class="nav-item nav-btn">
-              <a class="nav-link" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item nav-btn">
-              <a class="nav-link" href="./team.html">Team</a>
-            </li>
-            <li class="nav-item nav-btn">
-              <a class="nav-link" href="#">Projects</a>
-            </li>
-            <li class="nav-item nav-btn">
-              <a class="nav-link" href="#aboutus">About</a>
-            </li>
-            <li class="nav-item nav-btn">
-              <a class="nav-link" href="#contactus">Contact</a>
-            </li>
-        </div>
-      </nav>
+      <div class="brand"><a href="#">Code with Us</a></div>
+      <div class="nav">
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./team.html">Team</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#aboutus">About</a></li>
+          <li><a href="#contactus">Contact</a></li>
+        </ul>
+      </div>
     </header>
+
     <div class="team"></div>
 
     <footer>
