added participation section

--- a/profile.html
+++ b/profile.html
@@ -8,15 +8,19 @@
   </head>
   <body>
     <header>
-      <div class="brand"><a href="#">Coffee With Devs</a></div>
-      <div class="nav">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Contribute</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+      <nav class="navbar">
+        <span class="navbar-toggle" id="js-navbar-toggle">
+          <i class="fa fa-bars"></i>
+        </span>
+        <div class="brand"><a href="#">Code with Us</a></div>
+        <ul class="main-nav" id="js-menu">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./team.html">Team</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#aboutus">About</a></li>
+          <li><a href="#contactus">Contact</a></li>
         </ul>
-      </div>
+      </nav>
     </header>
     <div class="container">
       <br />
