--- a/profile.html
+++ b/profile.html
@@ -37,7 +37,7 @@
     </div>
     <br />
 
-    <script src="public/js/main.js"></script>
+    <script src="public/js/profile.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </body>
 </html>
