--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code With Us</title>
+    <link rel="icon" href="./logo/icon.png" />
     <link rel="stylesheet" href="./public/css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
-    />
+    <script src="https://kit.fontawesome.com/3e6ea9dfab.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
