--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="showcase" id="home">
       <div class="container">
         <div class="secHead">
-          <h1>Code With US</h1>
+          <h1><img src="./logo/logo.png" height="48" /></h1>
           <p>
             Code with US is an Organisation for university students who want to
             bring about a change through technology. We are focused upon
