--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span class="navbar-toggle" id="js-navbar-toggle">
           <i class="fa fa-bars"></i>
         </span>
-        <div class="brand"><a href="#">Code with Us</a></div>
+        <div class="brand"><img src="./logo/logo.png" height="48" /></div>
         <ul class="main-nav" id="js-menu">
           <li><a href="./index.html">Home</a></li>
           <li><a href="#section4">Team</a></li>
@@ -28,9 +28,9 @@
     <div class="showcase" id="home">
       <div class="container">
         <div class="secHead">
-          <h1><img src="./logo/logo.png" height="48" /></h1>
+          <h1>Code With Us</h1>
           <p>
-            Code with US is an Organisation for university students who want to
+            Code with Us is an Organisation for university students who want to
             bring about a change through technology. We are focused upon
             building technical and non-technical skills, which would help
             students to build a better community. # Lets Learn, Grow and
