--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div>
           <i class="fa fa-map-marker"></i>
           <p>
-            <span>Delhi</span>
+            <span>Ghaziabad</span>
             <!--Add your location here-->
           </p>
         </div>
@@ -187,14 +187,14 @@
         </div>
         <div>
           <i class="fa fa-envelope"></i>
-          <p><a href="mailto:emailhere@abc.com">emailhere@abc.com</a></p>
+          <p><a href="mailto:kundanbhasin11062000@gmail.com">kundanbhasin11062000@gmail.com</a> <a href="mailto:manish15052000@gmail.com">manish15052000@gmail.com</a></p>
           <!--Add You MailID after mailto:-->
         </div>
       </div>
       <div class="footer-right">
         <p class="footer-company-about">
           <span>About the company</span>
-          Code with US is an Organisation for university students who want to
+          Code with Us is an Organisation for university students who want to
           bring about a change through technology.
         </p>
         <div class="footer-icons">
