updated some changes

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code With Us</title>
     <link rel="icon" href="./logo/icon.png" />
-    <link rel="stylesheet" href="./public/css/style.css" />
-    <script src="https://kit.fontawesome.com/3e6ea9dfab.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/3e6ea9dfab.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -187,7 +190,14 @@
         </div>
         <div>
           <i class="fa fa-envelope"></i>
-          <p><a href="mailto:kundanbhasin11062000@gmail.com">kundanbhasin11062000@gmail.com</a> <a href="mailto:manish15052000@gmail.com">manish15052000@gmail.com</a></p>
+          <p>
+            <a href="mailto:kundanbhasin11062000@gmail.com"
+              >kundanbhasin11062000@gmail.com</a
+            >
+            <a href="mailto:manish15052000@gmail.com"
+              >manish15052000@gmail.com</a
+            >
+          </p>
           <!--Add You MailID after mailto:-->
         </div>
       </div>
@@ -206,6 +216,6 @@
       </div>
     </footer>
 
-    <script src="public/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
