--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title id="title"></title>
-    <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <header>
@@ -37,7 +37,7 @@
     </div>
     <br />
 
-    <script src="public/js/profile.js"></script>
+    <script src="assets/js/profile.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </body>
 </html>
