--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
             Code with Us is an Organisation for university students who want to
             bring about a change through technology. We are focused upon
             building technical and non-technical skills, which would help
-            students to build a better community. # Lets Learn, Grow and
-            Innovate together.
+            students to build a better community.<br /><strong
+              ># Lets Learn, Grow and Innovate together.</strong
+            >
           </p>
         </div>
       </div>
