better looking emails in footer

--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
           <i class="fa fa-envelope"></i>
           <p>
             <a href="mailto:kundanbhasin11062000@gmail.com"
-              >kundanbhasin11062000@gmail.com</a
+              >Kundan Bhasin</a
             >
             <a href="mailto:manish15052000@gmail.com"
-              >manish15052000@gmail.com</a
+              >Manish Kumar</a
             >
           </p>
           <!--Add You MailID after mailto:-->
