--- a/index.html
+++ b/index.html
@@ -95,6 +95,29 @@
             </div>
           </div>
         </div>
+        <div class="image">
+          <img
+            class="image__img"
+            src="https://avatars.githubusercontent.com/geeks5551"
+            onerror="this.src=customUrl"
+          />
+          <div class="image__overlay image__overlay_blur">
+            <div class="image__title text-center">Shivam Agrahari</div>
+            <div class="image__description">
+              <p class="text-center">
+                Full Stack Web developer And Tech Enthusiast :)
+              </p>
+            </div>
+            <div class="links_par">
+              <a href="https://github.com/geeks5551">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="https://www.facebook.com/profile.php?id=100042424777755">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
