--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
               <a href="https://github.com/kumarmanish03">
                 <i class="fab fa-github"></i>
               </a>
+              <a
+                href="https://coffeewithdevs.github.io/CodeWithUs/profile.html?username=kumarmanish03"
+                ><i class="fa fa-user"></i
+              ></a>
               <a href="https://www.facebook.com/profile.php?id=100009172781875">
                 <i class="fab fa-facebook"></i>
               </a>
@@ -89,6 +93,10 @@
               <a href="https://github.com/kundanb">
                 <i class="fab fa-github"></i>
               </a>
+              <a
+                href="https://coffeewithdevs.github.io/CodeWithUs/profile.html?username=kundanb"
+                ><i class="fa fa-user"></i
+              ></a>
               <a href="https://www.facebook.com/kundan.bhasin.11">
                 <i class="fab fa-facebook"></i>
               </a>
@@ -112,6 +120,10 @@
               <a href="https://github.com/geeks5551">
                 <i class="fab fa-github"></i>
               </a>
+              <a
+                href="https://coffeewithdevs.github.io/CodeWithUs/profile.html?username=geeks5551"
+                ><i class="fa fa-user"></i
+              ></a>
               <a href="https://www.facebook.com/profile.php?id=100042424777755">
                 <i class="fab fa-facebook"></i>
               </a>
@@ -202,7 +214,7 @@
         <div>
           <i class="fa fa-map-marker"></i>
           <p>
-            <span>Ghaziabad</span>
+            <span>Ghaziabad, India</span>
             <!--Add your location here-->
           </p>
         </div>
@@ -215,12 +227,8 @@
         <div>
           <i class="fa fa-envelope"></i>
           <p>
-            <a href="mailto:kundanbhasin11062000@gmail.com"
-              >Kundan Bhasin</a
-            >
-            <a href="mailto:manish15052000@gmail.com"
-              >Manish Kumar</a
-            >
+            <a href="mailto:kundanbhasin11062000@gmail.com">Kundan Bhasin |</a>
+            <a href="mailto:manish15052000@gmail.com">Manish Kumar</a>
           </p>
           <!--Add You MailID after mailto:-->
         </div>
