--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <div class="image__title text-center">Manish Kumar</div>
             <div class="image__description">
               <p class="text-center">
-                Hey, I am a 2nd Undergraduate at IIIT Allahabad. I love to learn
-                Web Development
+                Hey, I am a 2nd-Year Undergraduate at IIIT Allahabad. I love to
+                learn Web Development
               </p>
             </div>
             <div class="links_par">
