add get start btn

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
           building technical and non-technical skills, which would help
           students to build a better community.<br /><strong># Lets Learn, Grow and Innovate together.</strong>
         </p>
+        <button id="getStartBtn" onclick="location.href='https://github.com/CoffeeWithDevs/CodeWithUs'">Get
+          Start</button>
       </div>
     </div>
   </div>
