Added button in showcase
Created a new link in container section. I have styled the link as a button in style.css file under the class Showcase_button. Also created a hover effect.  :)

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             Code with Us is an Organisation for university students who want to
             bring about a change through technology. We are focused upon
             building technical and non-technical skills, which would help
-            students to build a better community.<br /><strong
-              ># Lets Learn, Grow and Innovate together.</strong
-            >
+            students to build a better community.<br /><strong>
+            # Lets Learn, Grow and Innovate together.</strong>
           </p>
         </div>
+        <a href="https://github.com/CoffeeWithDevs/CodeWithUs/" class="Showcase_button" target="_blank" rel="noopener noreferrer">GET STARTED</a>
       </div>
     </div>
 
