Added scroll up button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Code With Us</title>
     <link rel="icon" href="./logo/icon.png" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script
       src="https://kit.fontawesome.com/3e6ea9dfab.js"
       crossorigin="anonymous"
@@ -247,7 +248,11 @@
         </div>
       </div>
     </footer>
+      
+    <a id="button"><i class="fas fa-chevron-up"></i></a>
 
     <script src="assets/js/main.js"></script>
+      
+    <script src="assets/js/scroll-up.js"></script>
   </body>
 </html>
