--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     ></script>
   </head>
   <body>
+    <div id="loader"> </div>
+<div id="content">
+
     <header>
       <nav class="navbar">
         <span class="navbar-toggle" id="js-navbar-toggle">
@@ -248,11 +251,11 @@
         </div>
       </div>
     </footer>
-      
-    <a id="button"><i class="fas fa-chevron-up"></i></a>
 
+    <a id="button"><i class="fas fa-chevron-up"></i></a>
+</div>
     <script src="assets/js/main.js"></script>
-      
+
     <script src="assets/js/scroll-up.js"></script>
   </body>
 </html>
