--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               to bring about a change through technology. We are focused upon
               building technical and non-technical skills, which would help
               students to build a better community.<br /><strong>
-                # Lets Learn, Grow and Innovate together.</strong
+                # Lets Learn, Grow and Innovate together</strong
               >
             </h2>
           </div>
