Modified Dark Mode

--- a/index.html
+++ b/index.html
@@ -173,15 +173,16 @@
         </div>
       </div>
 
-      <div class="contact" id="contactus">
+      <div id="contactus">
         <div class="container">
           <h1>Contact Us</h1>
+          <div class="company-info">
+            <h3>Coffee with Devs</h3>
+          </div>
           <div class="wrapper animated zoomIn">
             <!-- class = "animated bounceInLeft" -->
-            <div class="company-info">
-              <h3>Coffee with Devs</h3>
-            </div>
             <div class="contact">
+              
               <h3>Email Us</h3>
               <form id="contactform">
                 <p>
